# chess_engine

./: CMakeLists.txt
src/: board.c  board.h  config.h  engine.c  engine.h  main.c  moves.c  moves.h  piece.c  piece.h  render.c  render.h  ui.h
